bindings/pydrake/multibody/test/model_directives_to_sdformat_files/errors/frames_same_name.error_regex
Found more than two frames with name: \[frame_name\], could not resolve the scope.
